// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardHeader /> renders with actions 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
    <div
      className="pgn__card-header-subtitle-md"
    >
      Subtitle
    </div>
  </div>
  <div
    className="pgn__card-header-actions"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      type="button"
    >
      Action
    </button>
  </div>
</div>
`;

exports[`<CardHeader /> renders with loading state 1`] = `
<div
  className="pgn__card-header"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-header-loader"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 20,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
</div>
`;

exports[`<CardHeader /> renders with title and subtitle prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
    <div
      className="pgn__card-header-subtitle-md"
    >
      Subtitle
    </div>
  </div>
</div>
`;

exports[`<CardHeader /> renders with title prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
  </div>
</div>
`;
